fix subtle spacing inconsistency

--- a/css/main.less
+++ b/css/main.less
@@ -1260,10 +1260,9 @@ svg {
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
+  justify-content: space-between;
 
   .repo-pull-requests {
-    margin: 0 5px;
-
     .card {
       .card-actor:last-child {
         animation: wiggle 0.5s infinite;
